# Hubx.Market

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DECISIONS.md  Makefile  PLANS.md  PRODUCT_RULES.md  PROJECT_MAP.md  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.js  tailwind.config.js
backend/: .env.example  README.md  pyproject.toml
backend/app/modules/accounts/: README.md  apps.py  models.py
backend/app/modules/api_keys/: README.md  admin.py  apps.py  models.py
backend/config/: README.md  __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/config/settings/: __init__.py  base.py  development.py  production.py
backend/modules/: __init__.py
backend/modules/accounts/: __init__.py  apps.py
backend/modules/api_keys/: __init__.py  apps.py
backend/modules/assistant/: __init__.py  apps.py
backend/modules/audit/: __init__.py  apps.py
backend/modules/cart/: __init__.py  apps.py
backend/modules/catalog/: __init__.py  apps.py
backend/modules/checkout/: __init__.py  apps.py
backend/modules/coupons/: __init__.py  apps.py
backend/modules/customers/: __init__.py
backend/modules/newsletter/: __init__.py  apps.py
backend/modules/notifications/: __init__.py  apps.py
backend/modules/orders/: __init__.py  apps.py
backend/modules/pages/: __init__.py  apps.py
backend/modules/payments/: __init__.py  apps.py
backend/modules/reviews/: __init__.py  apps.py
backend/modules/shipping/: __init__.py  apps.py
backend/modules/subscriptions/: __init__.py  apps.py
backend/modules/tenants/: __init__.py  apps.py
(+1172 files in other folders)
