[project]
name = "ecommerce-saas-backend"
version = "0.1.0"
description = "Backend Django do SaaS de e-commerce multi-tenant"
requires-python = ">=3.12"
dependencies = [
  "Django>=5.0",
  "djangorestframework>=3.15",
  "celery>=5.3",
  "redis>=5.0",
  "psycopg[binary]>=3.1",
  "python-dotenv>=1.0"
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_tests.py"]
